--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,149 @@
-.hide {
-    display: none;
-  }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-  
+.hide{
+    display: none;
+}
+
+header{
+    width: 100%;
+    height: 50px;
+    background-color: tomato;
+    color: white;
+    text-align: center;
+    padding-top: 5px;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: 25% 75%;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+    "search-city-section weather-section";
+}
+
+.today-header-section{
+    display: flex;
+    text-align: center;
+}
+
+
+.weather-section{
+    width: 100%;
+}
+
+.today-weather{
+    border: 1px solid black;
+    margin: 10px 0px;
+    padding: 5px 10px;
+}
+
+.today-weather {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.today-weather p{
+    margin: 15px 0px;
+}
+
+#daily-weather-last-item{
+    padding-bottom: 10px;
+}
+
+.weather-boxes{
+    border: 1px solid black;
+    background-color: tomato;
+    color: white;
+    margin-top: 10px;
+    padding: 10px 5px;
+}
+
+.weather-boxes p{
+    padding-top: 10px;
+}
+
+.weather-boxes img{
+    margin-top: 10px;
+}
+
+.search-city-section{
+    display: flex;
+    flex-direction: column;
+    margin: 10px 20px;
+}
+
+.search-city-section .btn{
+    margin-top: 15px;
+
+}
+
+.search-section{
+    display: flex;
+    flex-direction: column;
+    margin: 15px 0px;
+}
+
+.search-section .btn{
+    background-color: tomato;
+    color: white;
+}
+
+.btn{
+    height: 35px;
+    border-radius: 5px;
+    border: none;
+    background-color: lightgray;
+}
+
+.btn:hover{
+    background-color: rgb(182, 181, 181);
+    cursor: pointer;
+}
+
+.weather-section{
+    display: flex;
+    flex-direction: column;
+}
+
+.fiveDays-weather{
+ display: flex;
+ justify-content: space-between;
+ align-items: flex-start;
+
+}
+
+.weather-boxes{
+    padding-right: 30px;
+    height: 180px;
+
+}
+
+.btn{
+    height: 35px;
+    border-radius: 5px;
+    border: none;
+    background-color: lightgray;
+}
+
+.btn:hover{
+    background-color: rgb(182, 181, 181);
+    cursor: pointer;
+}
+
+.weather-section{
+    display: flex;
+    flex-direction: column;
+}
+
+.fiveDays-weather{
+ display: flex;
+ justify-content: space-between;
+ align-items: flex-start;
+
+}
+
+
